For historical reference, the changes since v2.1.0 and the complete LxDoom
changelog follows it.

Changes from v2.3.1 to v2.3.2
- fix Inferno intermission screens
- don't play music when volume is 0
- fix fuzz drawing for hi-res
- fixed patch drawing with VPT_FLIP (Doom2 cast drawing)
- fix dehacked NOSECTOR/NOBLOCKMAP effects

Changes from v2.3.0 to v2.3.1
- disabled vidd support, because currently it's broken
- network console variables are exchanged now
- waiting for network can be aborted on windows
- several keys didn't work in demo playback
- fixed levelname and other widgets on automap
- load opengl library only once to prevent error on mode switching
- fix savegame handling
- unavailable IWADs are disabled in the load wad menu
- several small fixes to the new software renderer
- reimplemented multipatch textures on two sided lines
- fixed buffer overflow on intermission texts
- filenames with dots beside the one on the extension work better now
- fixed texture pegging of upper textures in OpenGL
- correctly search prboom.wad
- removed hubs and fragglescript as they are too buggy
- fixed savegame root directory
- fixed several endian problems (for PowerPC and Sparc)
- added more options to menus
- fixed some default config values
- load OpenGL libraries only when needed
- autorun available in key bindings menu
- live monster counter for HUD
- fast forward to given map # in demo playback
- fixes for various sound bugs
- fix doom2 demos at levels with >10 deathmatch starts
- and more compatibility and demo fixes
- support higher-turning-resolution demos from v1.91

Changes from v2.2.4 to v2.3.0
- the OpenGL libs are loaded dynamically
- only one executable for software rendering and OpenGL
- option for sound compatibility with original Doom
- added more compatibility levels (check frontend configurations!)
- in game switching between fullscreen and windowed mode
- fix super-shotgun reload on last shot
- intermission demo sync bug fixed